--- a/student-detail-service/student-detail-service-local.yml
+++ b/student-detail-service/student-detail-service-local.yml
@@ -5,8 +5,7 @@ spring:
     active: local  
   data:
     cassandra:
-      contact-points:
-      - 192.168.99.100
+      contact-points: 192.168.99.100
       keyspace-name: student_keyspace
       port: 9042
 server:
