--- a/student-client/student-client-local.yml
+++ b/student-client/student-client-local.yml
@@ -2,9 +2,17 @@ spring:
   application:
     name: student-client-local
   profiles:
-    active: local  
-  data:
-    cassandra:
-      contact-points: 192.168.99.100
-      keyspace-name: student_keyspace
-      port: 9042
+    active: local
+  h2:
+    console:
+      enabled: true
+      path: /h2
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true  
+  datasource:
+    url: jdbc:h2:mem:test
+    username: sa
+    password: 
+    driver-class-name: org.h2.Driver    
