--- a/student-client/student-client-local.yml
+++ b/student-client/student-client-local.yml
@@ -16,3 +16,6 @@ spring:
     username: sa
     password: 
     driver-class-name: org.h2.Driver    
+student-client-local:
+  ribbon:
+    listOfServers: http://localhost:8080,http://localhost:8081    
