Correcting the ribbon listOfService property

--- a/student-client/student-client-local.yml
+++ b/student-client/student-client-local.yml
@@ -16,6 +16,6 @@ spring:
     username: sa
     password: 
     driver-class-name: org.h2.Driver    
-student-client-local:
+student-detail-service:
   ribbon:
     listOfServers: http://localhost:8080,http://localhost:8081    
