changing the name

--- a/eureka-naming-server/eureka-naming-server-local.yml
+++ b/eureka-naming-server/eureka-naming-server-local.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: eureka-naming-server
+    name: eureka-naming-server-local   
 eureka:
   client:
     register-with-eureka: false
