--- a/student-client/student-client-local.yml
+++ b/student-client/student-client-local.yml
@@ -15,7 +15,11 @@ spring:
     url: jdbc:h2:mem:test
     username: sa
     password: 
-    driver-class-name: org.h2.Driver    
+    driver-class-name: org.h2.Driver   
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka/     
 student-detail-service:
   ribbon:
     listOfServers: http://localhost:8080,http://localhost:8081    
