--- a/student-detail-service/student-detail-service-local.yml
+++ b/student-detail-service/student-detail-service-local.yml
@@ -8,6 +8,10 @@ spring:
       contact-points: 192.168.99.100
       keyspace-name: student_keyspace
       port: 9042
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka/         
 server:
   servlet:
     context-path: /v1
