Commented the Ribbon Hardcoded URL as Eureka and Ribbon will talk to each other and configure the URLs

--- a/student-client/student-client-local.yml
+++ b/student-client/student-client-local.yml
@@ -20,6 +20,7 @@ eureka:
   client:
     service-url:
       default-zone: http://localhost:8761/eureka/     
-student-detail-service:
-  ribbon:
-    listOfServers: http://localhost:8080,http://localhost:8081    
+# Commenting the below section so that Ribbon can talk to Eureka
+#student-detail-service:
+#  ribbon:
+#    listOfServers: http://localhost:8080,http://localhost:8081    
