--- a/student-detail-service/student-detail-service-dev.yml
+++ b/student-detail-service/student-detail-service-dev.yml
@@ -8,6 +8,10 @@ spring:
       contact-points: 127.0.0.1
       keyspace-name: student_keyspace_dev
       port: 9042
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka/
 server:
   servlet:
     context-path: /v1
