Adding new config properties files and removing the profile name from services

--- a/eureka-naming-server/eureka-naming-server-local.yml
+++ b/eureka-naming-server/eureka-naming-server-local.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: eureka-naming-server-local   
+    name: eureka-naming-server
 eureka:
   client:
     register-with-eureka: false
