Adding hystrix in client

--- a/student-client/student-client-local.yml
+++ b/student-client/student-client-local.yml
@@ -26,3 +26,6 @@ eureka:
 #    listOfServers: http://localhost:8080,http://localhost:8081
 server:
   port: 8090
+feign:
+  hystrix:
+    enabled: true
