--- a/zuul-api-gateway/zuul-api-gateway-local.yml
+++ b/zuul-api-gateway/zuul-api-gateway-local.yml
@@ -5,6 +5,9 @@ eureka:
   client:
     service-url:
       default-zone: http://localhost:8761/eureka/
-
+    fetch-registry: true
+    register-with-eureka: true
+  instance:
+    prefer-ip-address: true
 server:
   port: 8762
