Adding Zuul Api Gateway

--- a/zuul-api-gateway/zuul-api-gateway-local.yml
+++ b/zuul-api-gateway/zuul-api-gateway-local.yml
@@ -5,9 +5,11 @@ eureka:
   client:
     service-url:
       default-zone: http://localhost:8761/eureka/
-    fetch-registry: true
-    register-with-eureka: true
-  instance:
-    prefer-ip-address: true
 server:
   port: 8762
+zuul:
+  prefix: /zuul
+  routes:
+    student-client:
+      path: /v1/client/**
+      serviceId: student-client
