--- a/zuul-api-gateway/zuul-api-gateway-local.yml
+++ b/zuul-api-gateway/zuul-api-gateway-local.yml
@@ -8,8 +8,7 @@ eureka:
 server:
   port: 8762
 zuul:
-  prefix: /zuul
   routes:
-    student-client:
-      path: /student-client/**
+    student:
+      path: /student/**
       serviceId: student-client
