Adding Zuul Api Gateway

--- a/zuul-api-gateway/zuul-api-gateway-local.yml
+++ b/zuul-api-gateway/zuul-api-gateway-local.yml
@@ -10,5 +10,6 @@ server:
 zuul:
   routes:
     student:
-      path: /student/**
-      serviceId: student-client
+      url: localhost:8090/v1/client/
+#      path: /student/**
+#      serviceId: student-client
