--- a/zuul-api-gateway/zuul-api-gateway-local.yml
+++ b/zuul-api-gateway/zuul-api-gateway-local.yml
@@ -10,6 +10,6 @@ server:
 zuul:
   routes:
     student:
-      url: localhost:8090
+#      url: localhost:8090
 #      path: /student/**
-#      serviceId: student-client
+      serviceId: student-client
