--- a/zuul-api-gateway/zuul-api-gateway-local.yml
+++ b/zuul-api-gateway/zuul-api-gateway-local.yml
@@ -9,7 +9,7 @@ server:
   port: 8762
 zuul:
   routes:
-    student:
+    student-client:
 #      url: localhost:8090
-#      path: /student/**
+      path: /student/**
       serviceId: student-client
